whoami/resources/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-http
  namespace: whoami
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`who.cryogence.io`)
      services:
        - name: whoami
          port: 80
          scheme: http
  tls:
    secretName: cert-who-io
